clean up makefile

--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:IZbVUPJQ5KLN/ANxT+DMP+PJFLGi1kncIzh20A5fR1Y=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,9 +10,10 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
 DB_HOST=db
-DB_DATABASE=laravel
-DB_USERNAME=laravel
-DB_PASSWORD=laravel
+DB_PORT=5432
+DB_DATABASE=syncworld_db_test
+DB_USERNAME=syncworld_username_test
+DB_PASSWORD=syncworld_password_test
 DB_TEST_DATABASE=laravel_test
 
 BROADCAST_DRIVER=log
