--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:IZbVUPJQ5KLN/ANxT+DMP+PJFLGi1kncIzh20A5fR1Y=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,11 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=db
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=laravel
-DB_PASSWORD=laravel
+DB_USERNAME=root
+DB_PASSWORD=
 DB_TEST_DATABASE=laravel_test
 
 BROADCAST_DRIVER=log
